# Chronicle-AI

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt
docs/: ANNOUNCEMENT.md
exports/daily/: .gitkeep
exports/weekly/: .gitkeep
scripts/: diary_cli.py
src/chronicle_ai/: __init__.py  api.py  arc_analyzer.py  art_engine.py  cli.py  conflict.py  diary.py  director.py  exports.py  image_client.py  llm_client.py  llm_utils.py  main.py  models.py  processor.py  recap.py  repository.py  season_manager.py  style_config.json  style_guide.py  visual_prompts.py
src/habit_cinematic/: diary.py  main.py
static/: app.js  index.html  style.css
tests/: test_core.py  test_director_suite.py  test_processor.py
