[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chronicle_ai"
version = "0.1.0"
authors = [
    { name = "Riju Saha", email = "your-email@example.com" },
]
description = "Turn daily diary logs into episodic stories with AI-powered cinematic narratives."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Text Processing",
    "Topic :: Multimedia :: Video",
]
keywords = ["diary", "journal", "ai", "narrative", "storytelling", "ollama", "llama"]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/RijuSaha-01/Chronicle-AI"
"Bug Tracker" = "https://github.com/RijuSaha-01/Chronicle-AI/issues"
"Documentation" = "https://github.com/RijuSaha-01/Chronicle-AI#readme"
"Source" = "https://github.com/RijuSaha-01/Chronicle-AI"

[project.scripts]
chronicle-ai = "chronicle_ai.cli:main"
chronicle = "chronicle_ai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
